# Computer-Aided-Design

./: .gitignore  readme.md
PhysicsEngine/: .gitignore  TODO list.txt  make.mk  physics  readme-ch.md  readme.md
PhysicsEngine/src/physics/: body.hpp  collisions.cpp  physics.cpp  planebody.hpp  spherebody.cpp  spherebody.hpp  spring.cpp  trianglebody.hpp
assignment1/: CMakeLists.txt  readme.md
assignment1/include/: camera.h  mesh.h
assignment1/src/: main.cpp  test.cpp
assignment2/: CMakeLists.txt  readme.md
assignment2/include/: spiralLine.h
assignment2/src/: main.cpp  main2.cpp
assignment3/: CMakeLists.txt  readme.md
assignment3/include/: snowing.h
assignment3/src/: main.cpp
assignment4/: CMakeLists.txt  readme.md
assignment4/config/: main.vert.glsl
assignment4/include/: camera.h  rotate.h
assignment4/src/: main.cpp
assignment5/: CMakeLists.txt  readme.md
assignment5/src/: main.cpp
assignment7/: CMakeLists.txt  readme.md
assignment7/config/: test.frag.glsl  test.vert.glsl
assignment7/src/: main.cpp
test/include/glad/: glad.h
test/src/: main.cpp
test1/: CMakeLists.txt
test2/: CMakeLists.txt
test2/src/: Lecture3.cpp  Lecture3_2.cpp  Source.cpp
test3/: CMakeLists.txt
test4/: CMakeLists.txt
test4/cmake/: FindFreetype.cmake
test4/src/: main.cpp  main1.cpp
